--- a/Data_and_privacy.html
+++ b/Data_and_privacy.html
@@ -26,7 +26,7 @@
   <ul>
     <li>Name of Cooperative</li>
     <li>CDA Registration Number</li>
-    <li>TIN</li>
+    <li>TIN</li>qweqweqewqweq
     <li>Soft copy of the Board Resolution/Secretary's Certificate indicating intent the avail the ARCS and the authorized representation to enter into an Agreement with the Company, as well as the designation of the said representative;</li>
     <li>Address and Contract Details (i.e email address, mobile number) of the Cooperative</li>
     <li>Address and Contract Details (i.e email address, mobile number) of the Cooperative</li>
